<resources>
    <string name="launcher_name">Blindroid Launcher</string>
    <string name="launcher_title">Ekran główny</string>
    <string name="launcher_all_apps">Wszystkie aplikacje</string>
    <string name="launcher_search_hint">Szukaj</string>
    <string name="launcher_search_apps_hint">Szukaj aplikacji</string>
    <string name="launcher_show_hidden">Pokaż ukryte aplikacje</string>
    <string name="launcher_all_apps_button">Wszystkie aplikacje</string>
    <string name="launcher_widgets_button">Widgety</string>
    <string name="launcher_widgets_title">Widgety</string>
    <string name="launcher_widgets_add">Dodaj widget</string>
    <string name="launcher_widgets_list">Lista widgetów</string>
    <string name="launcher_widgets_grid">Widok siatki</string>
    <string name="launcher_widget_bigger">Większy</string>
    <string name="launcher_widget_smaller">Mniejszy</string>
    <string name="launcher_widget_wider">Szerzej</string>
    <string name="launcher_widget_narrower">Węziej</string>
    <string name="launcher_widget_taller">Wyżej</string>
    <string name="launcher_widget_shorter">Niżej</string>
    <string name="launcher_widget_move_up">Przenieś wyżej</string>
    <string name="launcher_widget_move_down">Przenieś niżej</string>
    <string name="launcher_no_widgets">Brak widgetów</string>
    <string name="launcher_voice_button">Mowa</string>
    <string name="launcher_prev_page">Poprzedni ekran</string>
    <string name="launcher_next_page">Następny ekran</string>
    <string name="launcher_page_feed">Feed</string>
    <string name="launcher_page_announce">Ekran %1$d</string>
    <string name="launcher_page_announce_named">Ekran %1$d, %2$s</string>
    <string name="launcher_simple_favorites">Ulubione</string>
    <string name="launcher_suggested_apps">Sugerowane</string>
    <string name="launcher_usage_access_hint">Włącz dostęp do statystyk użycia, aby sugestie były pełniejsze.</string>
    <string name="launcher_usage_access_open">Otwórz ustawienia użycia</string>
    <string name="launcher_usage_access_missing">Włącz dostęp do statystyk użycia w ustawieniach systemu.</string>
    <string name="launcher_time_just_now">przed chwilą</string>
    <string name="launcher_time_minutes">%1$d min temu</string>
    <string name="launcher_time_hours">%1$d h temu</string>
    <string name="launcher_battery_charging">Ładowanie</string>
    <string name="launcher_battery_full">Naładowana</string>
    <string name="launcher_battery_discharging">Rozładowywanie</string>
    <string name="launcher_battery_not_charging">Nie ładuje</string>
    <string name="launcher_battery_unknown">Bateria</string>
    <string name="launcher_battery_plug_ac">Sieć</string>
    <string name="launcher_battery_plug_usb">USB</string>
    <string name="launcher_battery_plug_wireless">Indukcja</string>
    <string name="launcher_category_all">Wszystkie</string>
    <string name="launcher_category_recent">Ostatnie</string>
    <string name="launcher_category_frequent">Często używane</string>
    <string name="launcher_category_morning">Rano</string>
    <string name="launcher_category_day">W ciągu dnia</string>
    <string name="launcher_category_evening">Wieczorem</string>
    <string name="launcher_category_night">W nocy</string>
    <string name="launcher_category_new">Nowe</string>
    <string name="launcher_category_updated">Zaktualizowane</string>
    <string name="launcher_category_favorites">Ulubione</string>
    <string name="launcher_category_communication">Komunikacja</string>
    <string name="launcher_category_media">Multimedia</string>
    <string name="launcher_category_productivity">Produktywność</string>
    <string name="launcher_category_tools">Narzędzia</string>
    <string name="launcher_category_social">Społeczności</string>
    <string name="launcher_category_game">Gry</string>
    <string name="launcher_category_maps">Mapy</string>
    <string name="launcher_category_news">Wiadomości</string>
    <string name="launcher_category_finance">Finanse</string>
    <string name="launcher_category_travel">Podróże</string>
    <string name="launcher_category_education">Edukacja</string>
    <string name="launcher_category_health">Zdrowie</string>
    <string name="launcher_category_weather">Pogoda</string>
    <string name="launcher_sort_label">Sortowanie:</string>
    <string name="launcher_sort_alpha">Alfabetycznie</string>
    <string name="launcher_sort_recent">Ostatnio używane</string>
    <string name="launcher_sort_usage">Najczęściej używane</string>
    <string name="launcher_sort_install">Najnowsze instalacje</string>
    <string name="launcher_sort_update">Ostatnie aktualizacje</string>
    <string name="launcher_suggested_now">Polecane teraz</string>
    <string name="launcher_recent_apps">Ostatnio używane</string>
    <string name="launcher_widgets_search_hint">Szukaj widgetu</string>
    <string name="launcher_widget_size_format">Rozmiar: %1$ddp × %2$ddp</string>
    <string name="launcher_clear_search">Wyczyść</string>
    <string name="launcher_voice_search_button">Mów</string>
    <string name="launcher_voice_search_prompt">Powiedz nazwę aplikacji</string>
    <string name="launcher_results_count">Wyniki: 0</string>
    <string name="launcher_results_count_format">Wyniki: %1$d</string>
    <string name="launcher_clear_hidden">Pokaż wszystkie ukryte aplikacje</string>
    <string name="launcher_show_system_apps">Pokaż aplikacje systemowe</string>
    <string name="launcher_scroll_top">Do góry</string>
    <string name="launcher_scroll_bottom">Na dół</string>
    <string name="launcher_jump_letter_button">Skok A-Z</string>
    <string name="launcher_jump_letter">Skocz do litery</string>
    <string name="launcher_no_apps">Brak aplikacji</string>
    <string name="launcher_favorites">Ulubione</string>
    <string name="launcher_action_favorite_add">Dodaj do ulubionych</string>
    <string name="launcher_action_favorite_remove">Usuń z ulubionych</string>
    <string name="launcher_action_app_info">Informacje o aplikacji</string>
    <string name="launcher_action_uninstall">Odinstaluj</string>
    <string name="launcher_uninstall_confirm">Odinstalować %1$s?</string>
    <string name="launcher_uninstall_not_allowed">Nie można odinstalować tej aplikacji.</string>
    <string name="launcher_home_quick_menu">Menu ekranu głównego</string>
    <string name="launcher_action_add_app">Dodaj aplikację</string>
    <string name="launcher_action_add_widget">Dodaj widget</string>
    <string name="launcher_action_add_folder">Dodaj folder</string>
    <string name="launcher_action_add_screen_shortcut">Dodaj skrót ekranu</string>
    <string name="launcher_action_manage_screen_shortcuts">Zarządzaj skrótami ekranów</string>
    <string name="launcher_action_toggle_feed">Włącz/wyłącz feed</string>
    <string name="launcher_action_toggle_dock">Pokaż/ukryj dock</string>
    <string name="launcher_action_open_settings">Ustawienia launchera</string>
    <string name="launcher_edit_locked">Edycja ekranu głównego jest zablokowana.</string>
    <string name="launcher_edit_unlocked">Edycja ekranu głównego jest odblokowana.</string>
    <string name="launcher_settings_home_lock">Blokada edycji ekranu głównego</string>
    <string name="launcher_feed_enabled">Feed jest włączony</string>
    <string name="launcher_action_lock_edit">Zablokuj edycję</string>
    <string name="launcher_action_unlock_edit">Odblokuj edycję</string>
    <string name="launcher_settings_page_count">Liczba stron pulpitu</string>
    <string name="launcher_settings_all_apps_section">Szuflada aplikacji</string>
    <string name="launcher_settings_all_apps_labels">Pokaż etykiety w szufladzie</string>
    <string name="launcher_settings_show_favorites_section">Pokaż sekcję „Ulubione”</string>
    <string name="launcher_settings_show_suggested_now_section">Pokaż „Polecane teraz”</string>
    <string name="launcher_settings_show_suggested_section">Pokaż „Polecane”</string>
    <string name="launcher_settings_show_recent_section">Pokaż „Ostatnio używane”</string>
    <string name="launcher_settings_show_categories_row">Pokaż kategorie</string>
    <string name="launcher_settings_show_scroll_buttons">Pokaż przyciski przewijania</string>
    <string name="launcher_settings_show_voice_search">Pokaż wyszukiwanie głosowe</string>
    <string name="launcher_settings_show_results_count">Pokaż licznik wyników</string>
    <string name="launcher_settings_show_system_apps">Pokaż aplikacje systemowe</string>
    <string name="launcher_settings_sort_desc">Sortuj malejąco</string>
    <string name="launcher_settings_suggestion_mode">Tryb sugestii</string>
    <string name="launcher_screen_shortcut_name">Nazwa skrótu</string>
    <string name="launcher_screen_shortcut_name_hint">Np. Programy biurowe</string>
    <string name="launcher_screen_shortcut_page">Ekran</string>
    <string name="launcher_settings_button">Ustawienia</string>
    <string name="launcher_settings_title">Ustawienia launchera</string>
    <string name="launcher_settings_grid">Siatka ikon</string>
    <string name="launcher_settings_columns_4">4 kolumny</string>
    <string name="launcher_settings_columns_5">5 kolumn</string>
    <string name="launcher_settings_rows_4">4 rzędy</string>
    <string name="launcher_settings_rows_5">5 rzędów</string>
    <string name="launcher_settings_rows_6">6 rzędów</string>
    <string name="launcher_settings_icon_size">Rozmiar ikon</string>
    <string name="launcher_settings_label_size">Rozmiar tekstu</string>
    <string name="launcher_settings_small">Mały</string>
    <string name="launcher_settings_normal">Normalny</string>
    <string name="launcher_settings_large">Duży</string>
    <string name="launcher_settings_gestures">Gesty</string>
    <string name="launcher_settings_double_tap_lock">Podwójne stuknięcie blokuje ekran</string>
    <string name="launcher_gesture_two_tap">Gest: 2 palce – tapnięcie</string>
    <string name="launcher_gesture_two_up">Gest: 2 palce – przesunięcie w górę</string>
    <string name="launcher_gesture_two_down">Gest: 2 palce – przesunięcie w dół</string>
    <string name="launcher_gesture_two_left">Gest: 2 palce – przesunięcie w lewo</string>
    <string name="launcher_gesture_two_right">Gest: 2 palce – przesunięcie w prawo</string>
    <string name="launcher_gesture_three_tap">Gest: 3 palce – tapnięcie</string>
    <string name="launcher_gesture_three_up">Gest: 3 palce – przesunięcie w górę</string>
    <string name="launcher_gesture_three_down">Gest: 3 palce – przesunięcie w dół</string>
    <string name="launcher_gesture_three_left">Gest: 3 palce – przesunięcie w lewo</string>
    <string name="launcher_gesture_three_right">Gest: 3 palce – przesunięcie w prawo</string>
    <string name="launcher_settings_close">Zamknij</string>
    <string name="launcher_settings_dock">Dok</string>
    <string name="launcher_settings_hide_dock_labels">Ukryj etykiety w doku</string>
    <string name="launcher_settings_modes">Tryby</string>
    <string name="launcher_settings_super_simple">Tryb super-prosty (duże ikony)</string>
    <string name="launcher_settings_feed">Feed</string>
    <string name="launcher_settings_feed_enabled">Pokaż ekran feedu</string>
    <string name="launcher_settings_feed_mode">Źródło feedu</string>
    <string name="launcher_settings_dock_visible">Pokaż dok</string>
    <string name="launcher_settings_theme">Motyw launchera</string>
    <string name="launcher_settings_theme_light">Jasny</string>
    <string name="launcher_settings_theme_dark">Ciemny</string>
    <string name="launcher_settings_theme_black">Czarny</string>
    <string name="launcher_settings_theme_blue">Niebieski</string>
    <string name="launcher_settings_icon_style">Styl ikon</string>
    <string name="launcher_settings_icon_style_none">Bez tła</string>
    <string name="launcher_settings_icon_style_circle">Okrągłe tło</string>
    <string name="launcher_settings_wallpaper">Ustaw tapetę</string>
</resources>